# nix-test

./: README.md
cpp/: .gitignore  flake.nix
rust/: .gitignore  Cargo.lock.copy  Cargo.toml  flake.nix
rust-wasm/: .gitignore  Cargo.toml  flake.nix  flake.nix0  flake.nix2
rust-wasm/src/: lib.rs
