[package]
name = "nix-test-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#git2 = "0.13.20"
gmp-mpfr-sys = "1.4.8"

[[bin]]
name = "nix-test-rust"
path = "main.rs"

[package.metadata.nix]
app = true
build = true
library = true
systems = [
    "aarch64-linux",
    "aarch64-darwin",
    "i686-linux",
    "x86_64-darwin",
    "x86_64-linux",
]
